# ITI_NEO_AVR

./: README.md
COTS/: CMakeLists.txt  main.c
COTS/MCAL/DIO/: DIO_INTERFACE.h  DIO_Private.h  DIO_program.c
COTS/common/stdlib/: BIT_MATH.h  STD_TYPES.h
